hphp/hack/test/typecheck/inout/bad_inout_use_byref.php.exp
ERROR: File "bad_inout_use_byref.php", line 7, characters 11-11:
You cannot use this syntax with `inout`. (Parsing[1002])
ERROR: File "bad_inout_use_byref.php", line 7, characters 12-12:
An expression is expected here. (Parsing[1002])
ERROR: File "bad_inout_use_byref.php", line 7, characters 11-11:
Unbound name: `&` (a global constant) (Naming[2049])
ERROR: File "bad_inout_use_byref.php", line 7, characters 11-11:
Unbound global constant (Typing) (Typing[4106])
